--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 	<title>Shelley's Carousel Slider</title>
+	<link rel="stylesheet" type="text/css" href="/style.css">
+	<script type="text/javascript" src="/slider.js"></script>
 </head>
 <body>
 	<div class="slider">
