add images to slider

--- a/index.html
+++ b/index.html
@@ -8,10 +8,18 @@
 <body>
 	<div class="slider">
 		<ol>
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
+			<li>
+				<img src="./img/img01.jpeg">
+			</li>
+			<li>
+				<img src="./img/img02.jpeg">
+			</li>
+			<li>
+				<img src="./img/img03.jpeg">
+			</li>
+			<li>
+				<img src="./img/img04.jpeg">
+			</li>
 		</ol>
 		<div class="slide next"></div>
 		<div class="slide back"></div>
