Positioned the buttons. Renamed the container

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<script type="text/javascript" src="./slider.js"></script>
 </head>
 <body>
-	<div class="slider">
+	<div class="carousel">
 		<ol>
 			<li>
 				<img src="./img/img01.jpeg">
