using jquery. got button functionality

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
 	<title>Shelley's Carousel Slider</title>
 	<link rel="stylesheet" type="text/css" href="./style.css">
+	<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 	<script type="text/javascript" src="./slider.js"></script>
+
 </head>
 <body>
 	<div class="carousel">
