declared the charset

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
-<head>
+<head lang="en">
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 	<title>Shelley's Carousel Slider</title>
 	<link rel="stylesheet" type="text/css" href="./style.css">
-	<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+	<script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 	<script type="text/javascript" src="./slider.js"></script>
 
 </head>
@@ -11,16 +12,16 @@
 	<div class="carousel">
 		<ol>
 			<li>
-				<img src="./img/img01.jpeg">
+				<img src="./img/img01.jpeg" alt="">
 			</li>
 			<li>
-				<img src="./img/img02.jpeg">
+				<img src="./img/img02.jpeg" alt="">
 			</li>
 			<li>
-				<img src="./img/img03.jpeg">
+				<img src="./img/img03.jpeg" alt="">
 			</li>
 			<li>
-				<img src="./img/img04.jpeg">
+				<img src="./img/img04.jpeg" alt="">
 			</li>
 		</ol>
 		<div class="slide next"></div>
