added titles to the buttons for usability

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 				<img src="./img/img04.jpeg" alt="">
 			</li>
 		</ol>
-		<div class="slide next"></div>
-		<div class="slide back"></div>
+		<div class="slide next" title="Next"></div>
+		<div class="slide back" title="Previous"></div>
 	</div>
 </body>
 </html>
